somatório de vagas para melhor noção da necessidade

--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -368,6 +368,14 @@
               <td style="text-align: right;">{{vaga.4}}</td>
             </tr>
           {% endfor %}
+          <tr>
+            <td><b>Total</b></td>
+            <td style="text-align: right;"></td>
+            <td style="text-align: right;"></td>
+            <td style="text-align: right;"><b>{{total_vagas.2|floatformat:1}}</b></td>
+            <td style="text-align: right;"><b>{{total_vagas.3|floatformat:1}}</b></td>
+            <td style="text-align: right;"><b>{{total_vagas.4}}</b></td>
+          </tr>
         </tbody>
       </table>
       
