--- a/templates/plot_barras.html
+++ b/templates/plot_barras.html
@@ -16,18 +16,35 @@
 </div>
 
 <script>
+  Chart.plugins.register({
+    beforeInit: function(chart) {
+      chart.data.datasets.forEach(function(dataset, i) {
+        if (dataset.labelColor) {
+          chart.options.legend.labels.generateLabels = function(chart) {
+            return Chart.defaults.global.legend.labels.generateLabels.apply(this, [chart]).map(function(item, i) {
+              item.fillStyle = chart.data.datasets[i].labelColor;
+              return item;
+            });
+          };
+        }
+      });
+    }
+  });
+
   new Chart(document.getElementById("bar-chart-horizontal"), {
     type: "horizontalBar",
     data: {
       labels: [{% for curso in vagas %}"{{curso}}", {% endfor %}],
       datasets: [{
         label: "proporção de vagas disponíveis",
+        labelColor: "#444444",
         backgroundColor: [{% for curso in vagas %}"#{{curso.cor}}", {% endfor %}],
         data: [{% for value in vagas.values %}100*({{value.3|unlocalize}}/{{value.4}}), {% endfor %}],
         stack: "Stack 0",
         {% comment %} xAxisID: "bar-x-disponiveis", {% endcomment %}
       },{
-        label: "proporção de vagas totais",
+        label: "proporção de vagas totais (incluindo as não disponíveis)",
+        labelColor: "#DDDDDD",
         backgroundColor: [{% for curso in vagas %}"#{{curso.cor|clarear}}60", {% endfor %}],  // Mais brilho e transparência
         data: [{% for value in vagas.values %}100*({{value.2|unlocalize}}/{{value.4}}), {% endfor %}],
         stack: "Stack 0",
@@ -35,7 +52,10 @@
       }]
     },
     options: {
-      legend: {display: false},
+      legend: {
+        display: true,
+        position: "bottom",
+      },
       title: {
         display: true,
         text: "Preenchimento de vagas (%)",
@@ -49,6 +69,7 @@
           },
         }],
       },
+
       annotation: {
         annotations: [
           {
