--- a/professores/templates/professores/dinamicas_index.html
+++ b/professores/templates/professores/dinamicas_index.html
@@ -73,14 +73,24 @@
           if (!info.event.allDay) {
             if (info.view.type === "dayGridMonth" || info.view.type === "timeGridWeek") {
               let time = info.event.start.getHours() + ':' + info.event.start.getMinutes().toString().replace(/^(\d)$/, '0$1');
-              let nome_orientador = "sem orientador"
+              let nome_facilitador = "F: sem facilitador"
+              if (info.event.extendedProps.facilitador) {
+                let facilitador = info.event.extendedProps.facilitador.split(" ");
+                if(facilitador.length > 1) {
+                  nome_facilitador = "F: " + facilitador[0] + ' ' + facilitador[facilitador.length - 1];
+                }
+              }
+              let nome_orientador = "O: sem orientador"
               if (info.event.extendedProps.orientador) {
                 let orientador = info.event.extendedProps.orientador.split(" ");
                 if(orientador.length > 1) {
-                    nome_orientador = orientador[0] + ' ' + orientador[orientador.length - 1];
+                    nome_orientador = "O: " + orientador[0] + ' ' + orientador[orientador.length - 1];
                 }
               }
-              info.el.innerHTML = "<b>" + time + "</b><br><nobr>" + info.event.extendedProps.organizacao + "</nobr><br><nobr style='color:#F6F5A3'>" + info.event.extendedProps.local + "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
+              info.el.innerHTML = "<b>" + time + "</b><br><nobr>" + info.event.extendedProps.organizacao +
+                "</nobr><br><nobr style='color:#F6F5A3'>" + info.event.extendedProps.local + 
+                  "</nobr><br><nobr style='color:#FEFEFE'>" + nome_facilitador + 
+                  "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
             } 
           }
         },
@@ -92,9 +102,11 @@
                 {% if encontro.location %}+ 'Local: {{encontro.location}}\n'{% endif %}
                 {% if encontro.projeto %}
                   + 'Projeto: ({{encontro.projeto.organizacao.sigla}}) {{encontro.projeto.get_titulo}}' +
-                    '{% if encontro.projeto.orientador %}\nOrientador: {{encontro.projeto.orientador}}{% endif %}'
+                  '{% if encontro.facilitador %}\nFacilitador: {{encontro.facilitador}}{% endif %}' +
+                  '{% if encontro.projeto.orientador %}\nOrientador: {{encontro.projeto.orientador}}{% endif %}'
                 {% endif %},
                 organizacao: "{{encontro.projeto.organizacao.sigla}}",
+                facilitador: {% if encontro.facilitador %}"{{encontro.facilitador.get_full_name}}"{% else %}null{% endif %},
                 orientador: {% if encontro.projeto.orientador %}"{{encontro.projeto.orientador}}"{% else %}null{% endif %},
                 local: "{{encontro.location}}",
                 start: '{{encontro.startDate.year}}-{{encontro.startDate.month|stringformat:"02d"}}-{{encontro.startDate.day|stringformat:"02d"}}T{{encontro.startDate.hour|stringformat:"02d"}}:{{encontro.startDate.minute|stringformat:"02d"}}:00',
