mostra todo o conteúdo do textarea quando carrega dado

--- a/templates/projeto.html
+++ b/templates/projeto.html
@@ -177,3 +177,14 @@
     {% endfor %}
   </ul>
 </div>
+
+<script>
+  $(document).ready(function(){	
+    // Ajusta a altura de todas as textareas
+    $("textarea").each(function(){
+      if($(this).is(":visible")) {
+        $(this).css("height", this.scrollHeight + "px");
+      }
+    });
+  });
+</script>
