dando nome do titulo da página para aparecer na barra do navegador

--- a/administracao/templates/administracao/cadastra_disciplina.html
+++ b/administracao/templates/administracao/cadastra_disciplina.html
@@ -18,7 +18,7 @@
 
 {% block content %}
 
-  <span class="titulo">Cadastro de Disciplina</span>
+  <span class="titulo">{{ titulo }}</span>
   <br>
 
   <form method="post" id="disciplinaform" enctype="multipart/form-data"> {% csrf_token %}
