--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -26,14 +26,7 @@
 
 {% block content %}
 
-  <span class="titulo">
-    {% if usuario %}
-      Edição
-    {% else %}
-      Cadastro
-    {% endif %}
-    de Usuário
-  </span>
+  <span class="titulo">{{ titulo }}</span>
   <br>
 
   {% if mensagem %}
