--- a/administracao/templates/administracao/selecionar_orientadores.html
+++ b/administracao/templates/administracao/selecionar_orientadores.html
@@ -82,8 +82,7 @@
 {% endblock %}
 
 {% block content %}
-
-  <span class="titulo">Selecionar Orientadores</span>
+  <span class="titulo">{{titulo}}</span>
 
   {% if mensagem %}
     <span class="red-bold">{{mensagem|safe|linebreaks}}</span>
