--- a/documentos/templates/documentos/certificados_submetidos.html
+++ b/documentos/templates/documentos/certificados_submetidos.html
@@ -41,10 +41,7 @@
 {% endblock %}
 
 {% block content %}
-
-  <span class="titulo">Certificados</span>
-
-  {% comment %} Seletor da edição da pesquisa {% endcomment %}
+  <span class="titulo">{{ titulo }}</span>
   {% include "edicoes.html" %}
 
   <div class="row align-items-start mb-2" style="display: inline-block; margin-right: 3px;">
