--- a/documentos/templates/documentos/tabela_seguros.html
+++ b/documentos/templates/documentos/tabela_seguros.html
@@ -13,8 +13,7 @@
 {% endblock %}
 
 {% block content %}
-
-  <span class="titulo">Seguros Emitidos</span>
+  <span class="titulo">{{ titulo }}</span>
 
   <div class="table-responsive">
     <table id="SegurosTable" class="table-bordered table-sm">
