--- a/estudantes/templates/estudantes/relato_quinzenal.html
+++ b/estudantes/templates/estudantes/relato_quinzenal.html
@@ -52,8 +52,7 @@
 {% endblock %}
 
 {% block content %}
-
-  <span class="titulo">Formulário de Relato Quinzenal</span>
+  <span class="titulo">{{titulo}}</span>
   <br>
 
   {% if mensagem %}
