--- a/operacional/templates/operacional/avisos_listar.html
+++ b/operacional/templates/operacional/avisos_listar.html
@@ -32,7 +32,7 @@
 
 {% block content %}
 
-  <span class="titulo">Avisos</span>
+  <span class="titulo">{{ titulo }}</span>
 
   <label for="filter">Filtro:</label>
   <select id="filter" class="filter" data-tableId="projetos">
