--- a/organizacoes/templates/organizacoes/parceiro_projetos.html
+++ b/organizacoes/templates/organizacoes/parceiro_projetos.html
@@ -11,8 +11,7 @@
 {% endblock %}
 
 {% block content %}
-
-  <span class="titulo">Lista de Projetos</span>
+  <span class="titulo">{{ titulo }}</span>
 
   <b>Organização</b>: {{ organizacao }}<br><br>
 
