--- a/organizacoes/templates/organizacoes/parceiro_propostas.html
+++ b/organizacoes/templates/organizacoes/parceiro_propostas.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-  <span class="titulo">Propostas de Projetos Submetidas</span>
+  <span class="titulo">{{ titulo }}</span>
 
   <b>Organização</b>: {{ organizacao }}<br><br>
 
