--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -128,7 +128,7 @@
             <label class="topico" for="titulo">Título provisório do projeto<br>
             <small class="obs">um título para ser apresentado aos estudantes e ao longo do projeto, será possível revisar esse título</small>
             </label><br>
-            <input class="requiredField" type="text" size="80" maxlength="160" style="max-width: 100%;" id="titulo" name="titulo" value="{{proposta.titulo}}" required {% if edicao and liberadas_propostas %}disabled{% endif %}>
+            <input class="requiredField" type="text" size="80" maxlength="160" style="max-width: 100%;" id="titulo_prop" name="titulo_prop" value="{{proposta.titulo}}" required {% if edicao and liberadas_propostas %}disabled{% endif %}>
             <br><br>
 
             <label class="topico" for="desc_projeto">Descrição da Proposta de Projeto<br>
