--- a/professores/templates/professores/avaliacoes_pares.html
+++ b/professores/templates/professores/avaliacoes_pares.html
@@ -23,10 +23,8 @@
 {% endblock %}
 
 {% block content %}
+  <span class="titulo">{{titulo}}</span>
 
-  <span class="titulo">Avaliações de Pares</span>
-
-  {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" %}
   <br>
 
