--- a/professores/templates/professores/orientacoes_alocadas.html
+++ b/professores/templates/professores/orientacoes_alocadas.html
@@ -19,8 +19,7 @@
 {% endblock %}
 
 {% block content %}
-
-    <span class="titulo">Projetos Orientados</span>
+    <span class="titulo">{{titulo}}</span>
 
     <table class="table table-borderless table-sm arredondado">
     {% for projeto in projetos %}
