--- a/projetos/templates/projetos/correlacao_medias_cr.html
+++ b/projetos/templates/projetos/correlacao_medias_cr.html
@@ -35,7 +35,7 @@
 
   <div id="tudo">
 
-    <span class="titulo">Correlação entre Médias e CR</span>
+    <span class="titulo">{{ titulo }}</span>
 
     {% include "edicoes.html" with com_cursos=True %}
 
