--- a/projetos/templates/projetos/evolucao_notas.html
+++ b/projetos/templates/projetos/evolucao_notas.html
@@ -30,7 +30,7 @@
 
   <div id="tudo">
 
-    <span class="titulo">Evolução por Notas/Conceitos</span>
+    <span class="titulo">{{ titulo }}</span>
     <small>(esta janela está muito lenta pela grande quantidade de cálculos)</small><br><br>
     
     {% include "edicoes.html" with sem_edicao=True com_cursos=True %}
