--- a/projetos/templates/projetos/lista_acompanhamento.html
+++ b/projetos/templates/projetos/lista_acompanhamento.html
@@ -21,7 +21,7 @@
 
 {% block content %}
 
-  <span class="titulo">Acompanhamentos nas Organizações
+  <span class="titulo">{{ titulo }}
     <small class="esconder"><a
       class="open-acompanhamento"
       href="{% url 'acompanhamento_view' %}"
