--- a/users/templates/users/estudantes_objetivos.html
+++ b/users/templates/users/estudantes_objetivos.html
@@ -15,7 +15,7 @@
 {% block content %}
   
   <span class="titulo">
-    {% if lingua == 'pt' %}Objetivos de Aprendizagem por Estudante{% else %}Learning Goals by Student{% endif %}
+    {% if lingua == "pt" %}{{ titulo }}{% else %}Learning Goals by Student{% endif %}
     (Individual)
   </span>
 
