--- a/administracao/templates/administracao/bloqueados.html
+++ b/administracao/templates/administracao/bloqueados.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-  <span class="titulo">Usuários e IPs bloqueados</span>
+  <span class="titulo">{{ titulo }}</span>
 
   <div class="table-responsive">
     <table id="BloqueadosTable" class="table-bordered table-sm">
