--- a/administracao/templates/administracao/conexoes_estabelecidas.html
+++ b/administracao/templates/administracao/conexoes_estabelecidas.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-  <span class="titulo">Conexões Abertas</span>
+  <span class="titulo">{{ titulo }}</span>
 
   <div class="table-responsive">
     <table id="UsuariosTable" class="table-bordered table-sm">
