--- a/documentos/templates/documentos/tabela_atas.html
+++ b/documentos/templates/documentos/tabela_atas.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 
-  <span class="titulo">Atas do Comitê Capstone
+  <span class="titulo">{{ titulo }}
     {% if user.tipo_de_usuario == 4 %}
       <small class="esconder">
         <a
