--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -16,16 +16,10 @@
 {% endblock %}
 
 {% block content %}
-
   {% include "impressora.html" %}
-
-  <span class="titulo">Documentação dos Projetos</span>
-
-  {% comment %} Seletor da edição da pesquisa {% endcomment %}
+  <span class="titulo">{{ titulo }}</span>
   {% include "edicoes.html" with com_cursos=True %}
-
   {% include "informacoes.html" %}
-
   <br><br>
   
   <div class="atualizar">
