--- a/estudantes/templates/estudantes/avaliacao_pares.html
+++ b/estudantes/templates/estudantes/avaliacao_pares.html
@@ -14,9 +14,8 @@
 {% endblock %}
 
 {% block content %}
-
-  <span class="titulo">Avaliação de Pares {% if momento == "intermediaria" %}Intermediária{% else %}Final{% endif %}</span>
-
+  <span class="titulo">{{titulo}}</span>
+  
   {% if mensagem %}
     <h5 class="red-bold">{{mensagem}}</h5>
   {% endif %}
