--- a/estudantes/templates/estudantes/submissao_documento.html
+++ b/estudantes/templates/estudantes/submissao_documento.html
@@ -43,8 +43,7 @@
 
 
 {% block content %}
-
-  <span class="titulo">Submissão de Documentos</span>
+  <span class="titulo">{{titulo}}</span>
 
   {% if mensagem %}
     <span class="red-bold">{{mensagem|linebreaks}}</span>
