--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -32,7 +32,7 @@
 
   {% include "impressora.html" %}
 
-  <span class="titulo">Listagem de Bancas
+  <span class="titulo">{{titulo}}
     <small class="esconder">
       <a data-toggle="tooltip" data-html="true" animation="true" title="Agenda Nova Banca" class="open-modal"
           data-url="{% url 'bancas_criar' %}" href="{% url 'bancas_criar'%}"> 
