--- a/professores/templates/professores/dinamicas_index.html
+++ b/professores/templates/professores/dinamicas_index.html
@@ -191,7 +191,7 @@
 
 {% block content %}
 
-  <span class="titulo">Mentorias
+  <span class="titulo">{{ titulo }}
     <small class="esconder">
       <a data-toggle="tooltip" data-html="true" animation="true" title="Agenda Nova Mentoria" class="open-modal"
             data-url="{% url 'dinamicas_criar' %}" href="{% url 'dinamicas_criar'%}"> 
