--- a/professores/templates/professores/relatos_quinzenais.html
+++ b/professores/templates/professores/relatos_quinzenais.html
@@ -20,10 +20,8 @@
 {% endblock %}
 
 {% block content %}
-
-  <span class="titulo">Relatos Quinzenais</span>
-
-  {% comment %} Seletor da edição da pesquisa {% endcomment %}
+  <span class="titulo">{{titulo}}</span>
+  
   {% include "edicoes.html" %}
   <br>
 
