--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -33,14 +33,9 @@
 {% endblock %}
 
 {% block content %}
-
-  {% include "impressora.html" %}
-
-  <span class="titulo">Resultado dos Projetos</span>
-
-  {% comment %} Seletor da edição da pesquisa {% endcomment %}
+  {% include "impressora.html" %}  
+  <span class="titulo">{{titulo}}</span>
   {% include "edicoes.html" %}
-
   {% include "informacoes.html" %}
 
   <div class="atualizar">
