--- a/projetos/templates/projetos/projetos_vs_propostas.html
+++ b/projetos/templates/projetos/projetos_vs_propostas.html
@@ -6,23 +6,15 @@
 {% endcomment %}
 
 {% block head %}
-
   {% load static %}
-  
-  {% comment %} <script src="{% static 'js/sort.js' %}"></script> {% endcomment %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
-
-  {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
-
 {% endblock %}
 
 {% block content %}
   <span class="titulo">
-    {% if lingua == "pt" %}
-      Organizações, Projetos e Propostas
-    {% else %}
+    {% if lingua == "pt" %}{{ titulo }}{% else %}
       Organizations, Projects e Proposals
     {% endif %}
   </span>
