--- a/propostas/templates/propostas/mapeamento_estudante_projeto.html
+++ b/propostas/templates/propostas/mapeamento_estudante_projeto.html
@@ -80,12 +80,8 @@
 {% endblock %}
 
 {% block content %}
-
-  <span class="titulo">Mapeamento de Propostas por Estudante</span>
-
-  {% comment %} Seletor da edição da pesquisa {% endcomment %}
+  <span class="titulo">{{titulo}}</span>
   {% include "edicoes.html" with n_todas=True %}
-  
   {% include "informacoes.html" %}
 
   <div class="atualizar">
