--- a/propostas/templates/propostas/propostas_lista.html
+++ b/propostas/templates/propostas/propostas_lista.html
@@ -16,7 +16,7 @@
 
 {% block content %}
 
-  <span class="titulo">Lista de Propostas<small class="esconder"><a
+  <span class="titulo">{{ titulo }}<small class="esconder"><a
     href="{% url 'proposta_submissao' %}"
     >&#10133;</a></small>
   </span>
