--- a/templates/base.html
+++ b/templates/base.html
@@ -8,14 +8,13 @@
 <meta charset="UTF-8">
 <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
 <head>
-  {% block title %}<title>Projeto Final de Engenharia</title>{% endblock %}
+  {% block title %}<title>Capstone{% if titulo %}: {{ titulo }}{% endif %}</title>{% endblock %}
   {% load static %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{% static 'bootstrap-4.3.1-dist/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'fontawesome-free-5.15.1-web/css/all.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
   <link rel="stylesheet" href="{% static 'css/cores.css' %}">
 
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
@@ -31,16 +30,16 @@
       var string = msg.toLowerCase();
       var substring = "script error";
       if (string.indexOf(substring) > -1){
-        alert('Erro de Execução de JavaScript, contactar: lpsoares@insper.edu.br');
+        alert("Erro de Execução de JavaScript, contactar: lpsoares@insper.edu.br");
       } else {
         var message = [
-          'Message: ' + msg,
-          'URL: ' + url,
-          'Line: ' + lineNo,
-          'Column: ' + columnNo,
-          'Error object: ' + JSON.stringify(error),
-          'contactar: lpsoares@insper.edu.br'
-        ].join(' - ');
+          "Message: " + msg,
+          "URL: " + url,
+          "Line: " + lineNo,
+          "Column: " + columnNo,
+          "Error object: " + JSON.stringify(error),
+          "contactar: lpsoares@insper.edu.br"
+        ].join(" - ");
         alert(message);
       }
       return false;
