--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -30,9 +30,7 @@
 {% endblock %}
 
 {% block content %}
-  
-  <span class="titulo">{{aluno.user.get_full_name}}</span>
-
+  <span class="titulo">{{titulo}}</span>
   <strong>Usuário:</strong> {{ aluno.user.username }}<br>
   {% if aluno.matricula %}
     <strong>Matrícula:</strong> {{aluno.matricula}}<br>
