--- a/templates/proposta.html
+++ b/templates/proposta.html
@@ -29,6 +29,11 @@
   {% if projeto.proposta.intercambio %}
     <strong style="color:red">Proposta de Intercâmbio.</strong><br>
   {% endif %}
+
+  {% if projeto.proposta.empreendendo %}
+    <strong style="color:red">Proposta de grupo de estudantes regulares empreendendo em próprio projeto.</strong><br>
+  {% endif %}
+
   <br>
 
   {% if proposta.descricao %}
