--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -90,58 +90,58 @@
             <label class="topico" for="organizacao">Nome da Instituição/Empresa
             <small class="obs">sigla e nome comercial/fantasia (não é necessário indicar a Razão Social)</small>
             </label><br>
-            <textarea class="requiredField" id="organizacao" name="organizacao" rows="1" cols="120" maxlength="120" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{ proposta.nome_organizacao }}</textarea>
+            <textarea class="requiredField" id="organizacao" name="organizacao" rows="1" cols="120" maxlength="120" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.nome_organizacao %}{{ proposta.nome_organizacao }}{% endif %}</textarea>
 
-            <label class="topico" for="website">website:</label> <input class="requiredField" style="max-width: 100%;" type="text" size="75"  maxlength="250" id="website" name="website" value="{{proposta.website}}" placeholder="https://www.insper.edu.br" required {% if edicao and liberadas_propostas %}disabled{% endif %}><br><br>
+            <label class="topico" for="website">website:</label> <input class="requiredField" style="max-width: 100%;" type="text" size="75"  maxlength="250" id="website" name="website" {% if proposta.website %}value="{{proposta.website}}"{% endif %} placeholder="https://www.insper.edu.br" required {% if edicao and liberadas_propostas %}disabled{% endif %}><br><br>
 
             <label class="topico" for="endereco">Endereço<br>
             <small class="obs">Local de possíveis reuniões, visitas técnicas ou apresentações de resultados (opcional)</small>
             </label><br>
             <textarea id="endereco" name="endereco" rows="3" cols="120" maxlength="400" 
-              {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.endereco}}</textarea>
+              {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.endereco %}{{proposta.endereco}}{% endif %}</textarea>
             
             <label class="topico" for="contatos_tecnicos">Contatos Técnicos<br>  
             <small class="obs">nome/e-mail/telefone para que estudantes e orientadores entrem em contato a cerca do desenvolvimento do projeto</small>
             </label><br>
             <textarea id="contatos_tecnicos" class="requiredField" name="contatos_tecnicos" rows="3" cols="120" maxlength="400" required 
-              {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.contatos_tecnicos}}</textarea>
+              {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.contatos_tecnicos %}{{proposta.contatos_tecnicos}}{% endif %}</textarea>
         
             <label class="topico" for="contatos_adm">Contatos Administrativos<br>     
             <small class="obs">nome/e-mail/telefone para quem devemos entrar em contato para resolver questões contratuais ou RH (opcional)</small>
             </label><br>
             <textarea id="contatos_adm" name="contatos_adm" rows="3" cols="120" maxlength="400" 
-              {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.contatos_administrativos}}</textarea>
+              {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.contatos_administrativos %}{{proposta.contatos_administrativos}}{% endif %}</textarea>
 
             <label class="topico" for="descricao_organizacao">Informações sobre a instituição/empresa<br>
             <small class="obs">descreva a instituição/empresa para estudantes conhecerem o que ela faz (opcional)</small>
             </label><br>
             <textarea id="descricao_organizacao" name="descricao_organizacao" rows="8" cols="120" maxlength="3000"
-              {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.descricao_organizacao}}</textarea>
+              {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.descricao_organizacao %}{{proposta.descricao_organizacao}}{% endif %}</textarea>
             
             <label class="topico" for="info_departamento">Informações sobre a departamento<br>
             <small class="obs">descreva o departamento/área para estudantes conhecerem o que ele faz (opcional)</small>
             </label><br>
             <textarea id="info_departamento" name="info_departamento" rows="8" cols="120" maxlength="3000" 
-              {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.departamento}}</textarea>
+              {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.departamento %}{{proposta.departamento}}{% endif %}</textarea>
             <hr>
 
             <label class="topico" for="titulo">Título provisório do projeto<br>
             <small class="obs">um título para ser apresentado aos estudantes e ao longo do projeto, será possível revisar esse título</small>
             </label><br>
-            <input class="requiredField" type="text" size="80" maxlength="160" style="max-width: 100%;" id="titulo_prop" name="titulo_prop" value="{{proposta.titulo}}" required {% if edicao and liberadas_propostas %}disabled{% endif %}>
+            <input class="requiredField" type="text" size="80" maxlength="160" style="max-width: 100%;" id="titulo_prop" name="titulo_prop" {% if proposta.titulo %}value="{{proposta.titulo}}"{% endif %} required {% if edicao and liberadas_propostas %}disabled{% endif %}>
             <br><br>
 
             <label class="topico" for="desc_projeto">Descrição da Proposta de Projeto<br>
             <small class="obs">para discussão entre professores e que será visualizada pelos estudantes</small>
             </label><br>
             <textarea id="desc_projeto" class="requiredField" name="desc_projeto" rows="10" cols="120" maxlength="3000" required 
-            {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.descricao}}</textarea>
+            {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.descricao %}{{proposta.descricao}}{% endif %}</textarea>
 
             <label class="topico" for="expectativas">Expectativas de resultados/entregas<br>
             <small class="obs">exemplo: protótipos, modelos, ferramentas, estudos, validações, testes, padrões</small>
             </label><br>
             <textarea id="expectativas" class="requiredField" name="expectativas" rows="8" cols="120" maxlength="3000" required 
-              {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.expectativas}}</textarea>
+              {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.expectativas %}{{proposta.expectativas}}{% endif %}</textarea>
 
             <label class="topico" for="recursos">Recursos a serem disponibilizados ao grupo de estudantes<br>
             <small class="obs">algo será fornecido para os estudantes? ex: kits de desenvolvimento, matérias primas, acesso a infra de cloud. (opcional)</small>
@@ -215,7 +215,7 @@
             <br>
             <hr>
             <small style="display: block; line-height: 1.2;">
-            Obs.: Ao submeter o projeto, deve ficar claro que a intenção do Projeto Final de Engenharia é 
+            Obs.: Ao submeter o projeto, deve ficar claro que a intenção do Capstone é 
             que os estudantes tenham um contato próximo com as pessoas responsáveis nas instituições parceiras 
             para o desenvolvimento de uma solução em engenharia. Em geral os estudantes se comunicam uma vez 
             por semana para entender melhor o desafio, demonstrar resultados preliminares, fazerem 
