Trocando nomes de PFE para Capstone

--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -221,11 +221,11 @@
       &nbsp;<b>Total de Projetos: <span id="total_projetos"></span></b><br>
 
       &nbsp;<span style="background-color:lightgreen">&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        Certificação Excelência <span class="opt_full">Projeto Final de Engenharia</span><span class="opt_short">PFE</span> FALCONI-INSPER
+        Certificação Excelência FALCONI-INSPER
         (<span id="certificacao_excelencia"></span>)<br>
 
       &nbsp;<span style="background-color:lemonchiffon">&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        Certificação Destaque <span class="opt_full">Projeto Final de Engenharia</span><span class="opt_short">PFE</span> FALCONI-INSPER
+        Certificação Destaque FALCONI-INSPER
         (<span id="certificacao_destaque"></span>)<br>
 
       <script>
