--- a/projetos/templates/projetos/projetosincompleto.html
+++ b/projetos/templates/projetos/projetosincompleto.html
@@ -15,7 +15,7 @@
       </font>
   {% endautoescape %}    
   <br>
-  <button onclick="goBack()">Voltar</button>
+  <button class="btn btn-primary mb-1 mt-2" onclick="goBack()">Voltar</button>
 
   <script>
   function goBack() {
